deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosque-clock-api
  namespace: mosque-clock-ai
  labels:
    app: mosque-clock-api
spec:
  replicas: 3                             # tune for your traffic
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mosque-clock-api
  template:
    metadata:
      labels:
        app: mosque-clock-api
    spec:
      imagePullSecrets:                   # <-- only if the image is private
        - name: regcred
      containers:
        - name: api
          image: mosque-clock-ai:latest   
          imagePullPolicy: Always        # since I have just created the image locally and haven't pushed it to any image registry
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /openapi.json                       # or a lightweight /health route
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /openapi.json
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
