ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosque-clock-api
  namespace: mosque-clock-ai
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb          
  rules:
    - host: <eks-load-balancer-dns>.elb.amazonaws.com  #replace that with the domain of the application
  
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: mosque-clock-api
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - api.mydomain.com
  #     secretName: tls-cert         # cert‑manager will populate this
